--- a/server/.env
+++ b/server/.env
@@ -7,5 +7,5 @@ HOST = smtp.gmail.com
 SERVICE = gmail
 EMAIL_PORT = 587
 SECURE = false
-USER = "renoldowatson@gmail.com"
-PASS = 0171 9634
+EMAIL = "renoldowatson@gmail.com"
+PASS = 'november261'
