--- a/server/.env
+++ b/server/.env
@@ -7,5 +7,5 @@ HOST = smtp.gmail.com
 SERVICE = gmail
 EMAIL_PORT = 587
 SECURE = false
-EMAIL = "renoldowatson@gmail.com"
-PASS = 'november261'
+EMAIL = "jermel.watson26@gmail.com"
+PASS = nqax mbno wmdq kjnc
