deployed online with clever

--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,9 @@
 
 
-db_host = 'localhost'
-db_user = 'root'
-db_password=''
-db_database = 'user_database'
+db_host = be4fmkjwckpdzvd4lgrh-mysql.services.clever-cloud.com
+db_user = uvlj8axhvrifavv4
+db_password=qwHlK1k4RDublTevOS4C
+db_database = be4fmkjwckpdzvd4lgrh
 
 HOST = smtp.gmail.com
 SERVICE = gmail
