--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
-VITE_API_KEY =https://milestoneone.onrender.com
+VITE_API_KEY = https://milestoneone.onrender.com
+VITE_SECRET_KEY = 6Lfn640qAAAAAJz0AJy6drw25OBGvnZLo0g_RQOD
+VITE_SITE_KEY = 6Lfn640qAAAAAEzh864n4wXDixHC-byKMkDQVbnt
