--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "server": "node app.js",
     "dev": "nodemon app.js",
-    "test": "test.js"
+    "test": "test"
   },
   "author": "Jermel watson",
   "license": "ISC",
