--- a/server/package.json
+++ b/server/package.json
@@ -7,24 +7,25 @@
   "scripts": {
     "server": "node app.js",
     "dev": "nodemon app.js",
-    "test": "test"
+    "test": "mocha"
   },
   "author": "Jermel watson",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
-    "chai": "^5.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mocha": "^11.0.1",
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
+    "chai": "^5.1.2",
     "jest": "^29.7.0",
+    "mocha": "^11.0.1",
+    "sinon": "^19.0.2",
     "supertest": "^7.0.0"
   }
 }
